# emacspeak-speech-server

./: CMakeLists.txt  CONTRIBUTING  Makefile  README  README.md  alsa_player.cc  alsa_player.h  audio_manager.cc  audio_manager.h  audio_tasks.cc  audio_tasks.h  command_generator.cc  command_generator.h  command_handler.cc  command_handler.h  commands.cc  commands.h  eci-c++.cc  eci-c++.h  eci.h  input_parser.cc  input_parser.h  input_parser_test.cc  messages.cc  messages.h  server_main.cc  server_state.cc  server_state.h  speech_server.cc  speech_server.h  text_formatter.cc  text_formatter.h  tts.cc  tts.h
cmake/: multilib-i386-linux-gnu.cmake
doc/: README
references/: README
